crates/eden-config/tests/cases/fail/invalid_token_1/error.snap
---
source: crates/eden-config/tests/cases.rs
expression: diagnostic
input_file: crates/eden-config/tests/cases/fail/invalid_token_1
---
error: Invalid Discord bot token
  ┌─ /eden.toml:3:9
  │
3 │ token = "Hello World"
  │         ^^^^^^^^^^^^^
  │
  = Token must contain only ASCII characters with no whitespace
  = Get your bot token at: https://discord.com/developers/applications
